--- a/ShopOrderApp/ShopOrderApp.csproj
+++ b/ShopOrderApp/ShopOrderApp.csproj
@@ -310,6 +310,12 @@
     <Reference Include="Microsoft.Extensions.Primitives, Version=5.0.0.1, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Extensions.Primitives.5.0.1\lib\net461\Microsoft.Extensions.Primitives.dll</HintPath>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -530,11 +536,6 @@
     <Content Include="Content\images\works-order-icon.png" />
     <Content Include="Content\images\WZ_favicon.ico" />
     <Content Include="Content\imports\readme.txt" />
-    <Content Include="Content\New\assets\css\color_theme.css" />
-    <Content Include="Content\New\assets\css\skin_color.css" />
-    <Content Include="Content\New\assets\css\style.css" />
-    <Content Include="Content\New\assets\css\style_rtl.css" />
-    <Content Include="Content\New\assets\css\vendors_css.css" />
     <Content Include="Content\New\assets\icons\cryptocoins-master\cryptocoins.css" />
     <Content Include="Content\New\assets\icons\feather-icons\feather.min.js" />
     <Content Include="Content\New\assets\icons\flag-icon-css\css\flag-icon.css" />
@@ -561,70 +562,6 @@
     <Content Include="Content\New\assets\icons\themify-icons\fonts\themify9f24.svg" />
     <Content Include="Content\New\assets\icons\themify-icons\themify-icons.css" />
     <Content Include="Content\New\assets\icons\weather-icons\css\weather-icons.min.css" />
-    <Content Include="Content\New\assets\js\pages\advanced-form-element.js" />
-    <Content Include="Content\New\assets\js\pages\app-contact.js" />
-    <Content Include="Content\New\assets\js\pages\app-ticket.js" />
-    <Content Include="Content\New\assets\js\pages\c3-axis.js" />
-    <Content Include="Content\New\assets\js\pages\c3-bar-pie.js" />
-    <Content Include="Content\New\assets\js\pages\c3-data.js" />
-    <Content Include="Content\New\assets\js\pages\c3-line.js" />
-    <Content Include="Content\New\assets\js\pages\c3-multi-xy-line.js" />
-    <Content Include="Content\New\assets\js\pages\c3-stap-line.js" />
-    <Content Include="Content\New\assets\js\pages\calendar.js" />
-    <Content Include="Content\New\assets\js\pages\chart-widgets.js" />
-    <Content Include="Content\New\assets\js\pages\chartjs-int.js" />
-    <Content Include="Content\New\assets\js\pages\chat-popup.js" />
-    <Content Include="Content\New\assets\js\pages\component-animations-css3.js" />
-    <Content Include="Content\New\assets\js\pages\component-rating-init.js" />
-    <Content Include="Content\New\assets\js\pages\coundown-timer.js" />
-    <Content Include="Content\New\assets\js\pages\custom-scroll.js" />
-    <Content Include="Content\New\assets\js\pages\dashboard.js" />
-    <Content Include="Content\New\assets\js\pages\dashboard2.js" />
-    <Content Include="Content\New\assets\js\pages\dashboard3.js" />
-    <Content Include="Content\New\assets\js\pages\data-table.js" />
-    <Content Include="Content\New\assets\js\pages\date-paginator.js" />
-    <Content Include="Content\New\assets\js\pages\echart-bar.js" />
-    <Content Include="Content\New\assets\js\pages\echart-line-charts.js" />
-    <Content Include="Content\New\assets\js\pages\echart-pie-doghnut.js" />
-    <Content Include="Content\New\assets\js\pages\ecommerce_details.js" />
-    <Content Include="Content\New\assets\js\pages\editable-tables.js" />
-    <Content Include="Content\New\assets\js\pages\editor.js" />
-    <Content Include="Content\New\assets\js\pages\extra_taskboard.js" />
-    <Content Include="Content\New\assets\js\pages\form-code-editor.js" />
-    <Content Include="Content\New\assets\js\pages\form-compose.js" />
-    <Content Include="Content\New\assets\js\pages\form-validation.js" />
-    <Content Include="Content\New\assets\js\pages\form-x-editable.js" />
-    <Content Include="Content\New\assets\js\pages\formatter.js" />
-    <Content Include="Content\New\assets\js\pages\fullscreen.js" />
-    <Content Include="Content\New\assets\js\pages\gallery.js" />
-    <Content Include="Content\New\assets\js\pages\gridstackjs.js" />
-    <Content Include="Content\New\assets\js\pages\icons.js" />
-    <Content Include="Content\New\assets\js\pages\invoice.js" />
-    <Content Include="Content\New\assets\js\pages\list.js" />
-    <Content Include="Content\New\assets\js\pages\mailbox.js" />
-    <Content Include="Content\New\assets\js\pages\media.js" />
-    <Content Include="Content\New\assets\js\pages\nestable.js" />
-    <Content Include="Content\New\assets\js\pages\notification.js" />
-    <Content Include="Content\New\assets\js\pages\pace.js" />
-    <Content Include="Content\New\assets\js\pages\patients.js" />
-    <Content Include="Content\New\assets\js\pages\peity.js" />
-    <Content Include="Content\New\assets\js\pages\range-sliders.init.js" />
-    <Content Include="Content\New\assets\js\pages\slider.js" />
-    <Content Include="Content\New\assets\js\pages\statistic.js" />
-    <Content Include="Content\New\assets\js\pages\steps.js" />
-    <Content Include="Content\New\assets\js\pages\timeline.js" />
-    <Content Include="Content\New\assets\js\pages\toastr.js" />
-    <Content Include="Content\New\assets\js\pages\validation.js" />
-    <Content Include="Content\New\assets\js\pages\weather.js" />
-    <Content Include="Content\New\assets\js\pages\widget-blog.js" />
-    <Content Include="Content\New\assets\js\pages\widget-chartist.js" />
-    <Content Include="Content\New\assets\js\pages\widget-charts2.js" />
-    <Content Include="Content\New\assets\js\pages\widget-flot-charts.js" />
-    <Content Include="Content\New\assets\js\pages\widget-inline-charts.js" />
-    <Content Include="Content\New\assets\js\pages\widget-morris-charts.js" />
-    <Content Include="Content\New\assets\js\pages\widgets.js" />
-    <Content Include="Content\New\assets\js\template.js" />
-    <Content Include="Content\New\assets\js\vendors.min.js" />
     <Content Include="Content\New\assets\vendor_components\animate\animate.css" />
     <Content Include="Content\New\assets\vendor_components\apexcharts-bundle\dist\apexcharts.js" />
     <Content Include="Content\New\assets\vendor_components\bootstrap-colorpicker\dist\css\bootstrap-colorpicker.min.css" />
@@ -840,6 +777,12 @@
     <Content Include="Content\New\assets\vendor_plugins\timepicker\bootstrap-timepicker.min.css" />
     <Content Include="Content\New\assets\vendor_plugins\timepicker\bootstrap-timepicker.min.js" />
     <Content Include="Content\New\assets\vendor_plugins\weather-icons\WeatherIcon.js" />
+    <Content Include="Content\New\css\color_theme.css" />
+    <Content Include="Content\New\css\horizontal-menu.css" />
+    <Content Include="Content\New\css\skin_color.css" />
+    <Content Include="Content\New\css\style.css" />
+    <Content Include="Content\New\css\style_rtl.css" />
+    <Content Include="Content\New\css\vendors_css.css" />
     <Content Include="Content\New\images\1.jpg" />
     <Content Include="Content\New\images\150x100.png" />
     <Content Include="Content\New\images\alert\alert.png" />
@@ -1032,6 +975,72 @@
     <Content Include="Content\New\images\w2.jpg" />
     <Content Include="Content\New\images\w3.jpg" />
     <Content Include="Content\New\images\w4.jpg" />
+    <Content Include="Content\New\js\jquery.smartmenus.js" />
+    <Content Include="Content\New\js\menus.js" />
+    <Content Include="Content\New\js\pages\advanced-form-element.js" />
+    <Content Include="Content\New\js\pages\app-contact.js" />
+    <Content Include="Content\New\js\pages\app-ticket.js" />
+    <Content Include="Content\New\js\pages\c3-axis.js" />
+    <Content Include="Content\New\js\pages\c3-bar-pie.js" />
+    <Content Include="Content\New\js\pages\c3-data.js" />
+    <Content Include="Content\New\js\pages\c3-line.js" />
+    <Content Include="Content\New\js\pages\c3-multi-xy-line.js" />
+    <Content Include="Content\New\js\pages\c3-stap-line.js" />
+    <Content Include="Content\New\js\pages\calendar.js" />
+    <Content Include="Content\New\js\pages\chart-widgets.js" />
+    <Content Include="Content\New\js\pages\chartjs-int.js" />
+    <Content Include="Content\New\js\pages\chat-popup.js" />
+    <Content Include="Content\New\js\pages\component-animations-css3.js" />
+    <Content Include="Content\New\js\pages\component-rating-init.js" />
+    <Content Include="Content\New\js\pages\coundown-timer.js" />
+    <Content Include="Content\New\js\pages\custom-scroll.js" />
+    <Content Include="Content\New\js\pages\dashboard.js" />
+    <Content Include="Content\New\js\pages\dashboard2.js" />
+    <Content Include="Content\New\js\pages\dashboard3.js" />
+    <Content Include="Content\New\js\pages\data-table.js" />
+    <Content Include="Content\New\js\pages\date-paginator.js" />
+    <Content Include="Content\New\js\pages\echart-bar.js" />
+    <Content Include="Content\New\js\pages\echart-line-charts.js" />
+    <Content Include="Content\New\js\pages\echart-pie-doghnut.js" />
+    <Content Include="Content\New\js\pages\ecommerce_details.js" />
+    <Content Include="Content\New\js\pages\editable-tables.js" />
+    <Content Include="Content\New\js\pages\editor.js" />
+    <Content Include="Content\New\js\pages\extra_taskboard.js" />
+    <Content Include="Content\New\js\pages\form-code-editor.js" />
+    <Content Include="Content\New\js\pages\form-compose.js" />
+    <Content Include="Content\New\js\pages\form-validation.js" />
+    <Content Include="Content\New\js\pages\form-x-editable.js" />
+    <Content Include="Content\New\js\pages\formatter.js" />
+    <Content Include="Content\New\js\pages\fullscreen.js" />
+    <Content Include="Content\New\js\pages\gallery.js" />
+    <Content Include="Content\New\js\pages\gridstackjs.js" />
+    <Content Include="Content\New\js\pages\icons.js" />
+    <Content Include="Content\New\js\pages\invoice.js" />
+    <Content Include="Content\New\js\pages\list.js" />
+    <Content Include="Content\New\js\pages\mailbox.js" />
+    <Content Include="Content\New\js\pages\media.js" />
+    <Content Include="Content\New\js\pages\nestable.js" />
+    <Content Include="Content\New\js\pages\notification.js" />
+    <Content Include="Content\New\js\pages\pace.js" />
+    <Content Include="Content\New\js\pages\patients.js" />
+    <Content Include="Content\New\js\pages\peity.js" />
+    <Content Include="Content\New\js\pages\range-sliders.init.js" />
+    <Content Include="Content\New\js\pages\slider.js" />
+    <Content Include="Content\New\js\pages\statistic.js" />
+    <Content Include="Content\New\js\pages\steps.js" />
+    <Content Include="Content\New\js\pages\timeline.js" />
+    <Content Include="Content\New\js\pages\toastr.js" />
+    <Content Include="Content\New\js\pages\validation.js" />
+    <Content Include="Content\New\js\pages\weather.js" />
+    <Content Include="Content\New\js\pages\widget-blog.js" />
+    <Content Include="Content\New\js\pages\widget-chartist.js" />
+    <Content Include="Content\New\js\pages\widget-charts2.js" />
+    <Content Include="Content\New\js\pages\widget-flot-charts.js" />
+    <Content Include="Content\New\js\pages\widget-inline-charts.js" />
+    <Content Include="Content\New\js\pages\widget-morris-charts.js" />
+    <Content Include="Content\New\js\pages\widgets.js" />
+    <Content Include="Content\New\js\template.js" />
+    <Content Include="Content\New\js\vendors.min.js" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\settings-bar.css" />
     <Content Include="Content\Themes\base\accordion.css" />
