--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2239,6 +2239,7 @@
     <Content Include="Views\Trucks\Index.cshtml" />
     <Content Include="Views\PalletTracking\_PalletLabelPrint.cshtml" />
     <Content Include="Views\PalletTracking\PalletLabelPrintViewer.cshtml" />
+    <Content Include="Views\PalletTracking\SelectPalletStatus.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
