--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -935,6 +935,12 @@
     <Compile Include="Reports\Designs\LowStockItemsReport.Designer.cs">
       <DependentUpon>LowStockItemsReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reports\Designs\StockShortage.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reports\Designs\StockShortage.Designer.cs">
+      <DependentUpon>StockShortage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reports\Designs\StockValueReport.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -2247,6 +2253,7 @@
     <Content Include="Views\PalletTracking\_PalletLabelPrint.cshtml" />
     <Content Include="Views\PalletTracking\PalletLabelPrintViewer.cshtml" />
     <Content Include="Views\PalletTracking\SelectPalletStatus.cshtml" />
+    <Content Include="Views\Reports\StockShortageReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
@@ -2345,6 +2352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\Designs\LowStockItemsReport.resx">
       <DependentUpon>LowStockItemsReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\Designs\StockShortage.resx">
+      <DependentUpon>StockShortage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\Designs\StockValueReport.resx">
       <DependentUpon>StockValueReport.cs</DependentUpon>
